--- a/compose/2.9/docker-compose.yml
+++ b/compose/2.9/docker-compose.yml
@@ -3,13 +3,14 @@ services:
   solr:
     container_name: solr
     image: solr:8.11.1
+    networks:
+      - backend
     env_file:
       - ./.ckan-env
     environment:
       - CKAN_CORE_NAME=${CKAN_CORE_NAME}
       - CKAN_VERSION=${CKAN_VERSION}
     volumes:
+      - solr_data:/var/solr
       - ${PWD}/solr8/ckan_init_solr.sh:/docker-entrypoint-initdb.d/ckan_init_solr.sh
-  redis:
-    container_name: redis
-    image: redis:${REDIS_VERSION}
+
